--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "vscode-skype",
     "description": "Send skype messages from withing vscode code :)",
     "publisher": "riazXrazor",
-    "version": "0.0.1",
+    "version": "0.0.3",
     "engines": {
         "vscode": "^1.39.0"
     },
@@ -15,6 +15,7 @@
     "categories": [
         "Other"
     ],
+    "license": "MIT",
     "keywords": [
         "vscode-skype",
         "skype",
@@ -51,9 +52,14 @@
         ],
         "keybindings": [
             {
-                "command": "vscode-skype.setConfig",
+                "command": "vscode-skype.sendMessage",
                 "key": "alt+s",
                 "mac": "cmd+alt+s"
+            },
+            {
+                "command": "vscode-skype.contactList",
+                "key": "alt+l",
+                "mac": "cmd+alt+l"
             }
         ],
         "configuration": {
@@ -101,7 +107,6 @@
     "scripts": {
         "vscode:prepublish": "tsc -p ./",
         "compile": "tsc -watch -p ./",
-        "postinstall": "node ./node_modules/vscode/bin/install",
         "test": "node ./node_modules/vscode/bin/test"
     },
     "devDependencies": {
@@ -112,10 +117,10 @@
         "glob": "^7.1.5",
         "mocha": "^6.2.2",
         "tslint": "^5.20.0",
-        "typescript": "^3.6.4",
+        "typescript": "^3.8.0-dev.20191102",
         "vscode-test": "^1.2.2"
     },
     "dependencies": {
-        "skype-http": "0.0.15-build.210"
+        "skype-http": "git+https://github.com/riazXrazor/skype-http.git"
     }
 }
